fixed bug with invisible text in note

--- a/src/main/resources/public/css/myCSS/account.css
+++ b/src/main/resources/public/css/myCSS/account.css
@@ -65,3 +65,8 @@ button {
 .changePassMessage {
 	display: none;
 }
+
+#onMain {
+	text-decoration: none;
+	color: #f5f5f5;
+}
